--- a/web.config
+++ b/web.config
@@ -27,8 +27,8 @@
   <BaseRestExtensions configSource="config\BaseRestExtensions.config" />
 
   <appSettings>
-    <add key="umbracoDbDSN" value="" />
-    <add key="umbracoConfigurationStatus" value="" />
+    
+    <add key="umbracoConfigurationStatus" value="6.1.6" />
     <add key="umbracoReservedUrls" value="~/config/splashes/booting.aspx,~/install/default.aspx,~/config/splashes/noNodes.aspx,~/VSEnterpriseHelper.axd" />
     <add key="umbracoReservedPaths" value="~/umbraco,~/install/" />
     <add key="umbracoContentXML" value="~/App_Data/umbraco.config" />
@@ -78,7 +78,7 @@
     <remove name="umbracoDbDSN" />
     <add name="local" connectionString="" providerName="" />
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
-  </connectionStrings>
+  <add name="umbracoDbDSN" connectionString="Server=tcp:xdihksoq9z.database.windows.net,1433;Database=uwestfest;User ID=tonyguid@xdihksoq9z;Password=P@ssword" providerName="System.Data.SqlClient" /></connectionStrings>
 
   <system.web>
     <customErrors mode="RemoteOnly" />
