Added Windows Azure content

--- a/App_Data/umbraco.config
+++ b/App_Data/umbraco.config
@@ -7,24 +7,7 @@
 
 ]>
 <root id="-1">
-  <umbHomepage id="1050" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2014-03-18T15:10:17" updateDate="2014-03-18T15:10:23" nodeName="Simple website" urlName="simple-website" path="-1,1050" isDoc="" nodeType="1047" creatorName="tonyguid" writerName="tonyguid" writerID="0" template="1045" nodeTypeAlias="umbHomepage">
-    <siteName>Simple website</siteName>
-    <siteDescription><![CDATA[Off to a great start]]></siteDescription>
-    <bodyText><![CDATA[
-<p>The Simple Starter Kit gives you a bare-bones website that
-introduces you to a set of well-defined conventions for building an
-Umbraco website.</p>
-
-<p>The Simple website is very basic in form and provided without
-any design or functionality - unless you add a Skin, of course. By
-installing the Simple Starter Kit, you'll begin with a minimal site
-built on best practices. You'll also enjoy the benefits of speaking
-the same "language" as the rest of the Umbraco community by using
-common properties and naming conventions.</p>
-
-<p>Now that you know what the Simple site is, it is time to get
-started using Umbraco.</p>
-]]></bodyText>
+  <umbHomepage id="1050" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2014-03-18T15:10:17" updateDate="2014-03-18T16:38:11" nodeName="Simple website" urlName="simple-website" path="-1,1050" isDoc="" nodeType="1047" creatorName="tonyguid" writerName="tonyguid" writerID="0" template="1045" nodeTypeAlias="umbHomepage">
     <umbTextpage id="1051" parentID="1050" level="2" creatorID="0" sortOrder="0" createDate="2014-03-18T15:10:19" updateDate="2014-03-18T15:10:26" nodeName="Installing modules" urlName="installing-modules" path="-1,1050,1051" isDoc="" nodeType="1048" creatorName="tonyguid" writerName="tonyguid" writerID="0" template="1046" nodeTypeAlias="umbTextpage">
       <umbracoNaviHide>0</umbracoNaviHide>
       <bodyText><![CDATA[
@@ -133,6 +116,16 @@ more functionality, such as automated navigation. This is done by
 href="http://umbraco.org/help-and-support/video-tutorials/getting-started"
  title="Umbraco Modules">installing Umbraco modules</a>.</p>
 ]]></bodyText>
+    </umbTextpage>
+    <siteName>Umbraco Azure Web Sites!</siteName>
+    <siteDescription><![CDATA[Running in Windows Azure Web Sites!]]></siteDescription>
+    <bodyText><![CDATA[<p>This site is now running in Windows Azure!</p>
+<p>The Simple Starter Kit gives you a bare-bones website that introduces you to a set of well-defined conventions for building an Umbraco website.</p>
+<p>The Simple website is very basic in form and provided without any design or functionality - unless you add a Skin, of course. By installing the Simple Starter Kit, you'll begin with a minimal site built on best practices. You'll also enjoy the benefits of speaking the same "language" as the rest of the Umbraco community by using common properties and naming conventions.</p>
+<p>Now that you know what the Simple site is, it is time to get started using Umbraco.</p>]]></bodyText>
+    <umbTextpage id="1055" parentID="1050" level="2" creatorID="0" sortOrder="3" createDate="2014-03-18T16:39:17" updateDate="2014-03-18T16:39:46" nodeName="About Windows Azure" urlName="about-windows-azure" path="-1,1050,1055" isDoc="" nodeType="1048" creatorName="tonyguid" writerName="tonyguid" writerID="0" template="1046" nodeTypeAlias="umbTextpage">
+      <umbracoNaviHide>0</umbracoNaviHide>
+      <bodyText><![CDATA[<p>To learn about Windows azure, go to www.windowsazure.com</p>]]></bodyText>
     </umbTextpage>
   </umbHomepage>
 </root>
