updated during presentation

--- a/App_Data/umbraco.config
+++ b/App_Data/umbraco.config
@@ -123,9 +123,11 @@ href="http://umbraco.org/help-and-support/video-tutorials/getting-started"
 <p>The Simple Starter Kit gives you a bare-bones website that introduces you to a set of well-defined conventions for building an Umbraco website.</p>
 <p>The Simple website is very basic in form and provided without any design or functionality - unless you add a Skin, of course. By installing the Simple Starter Kit, you'll begin with a minimal site built on best practices. You'll also enjoy the benefits of speaking the same "language" as the rest of the Umbraco community by using common properties and naming conventions.</p>
 <p>Now that you know what the Simple site is, it is time to get started using Umbraco.</p>]]></bodyText>
-    <umbTextpage id="1055" parentID="1050" level="2" creatorID="0" sortOrder="3" createDate="2014-03-18T16:39:17" updateDate="2014-03-18T16:39:46" nodeName="About Windows Azure" urlName="about-windows-azure" path="-1,1050,1055" isDoc="" nodeType="1048" creatorName="tonyguid" writerName="tonyguid" writerID="0" template="1046" nodeTypeAlias="umbTextpage">
+    <umbTextpage id="1055" parentID="1050" level="2" creatorID="0" sortOrder="3" createDate="2014-03-18T16:39:17" updateDate="2014-03-21T18:02:59" nodeName="About Windows Azure" urlName="about-windows-azure" path="-1,1050,1055" isDoc="" nodeType="1048" creatorName="tonyguid" writerName="tonyguid" writerID="0" template="1046" nodeTypeAlias="umbTextpage">
       <umbracoNaviHide>0</umbracoNaviHide>
-      <bodyText><![CDATA[<p>To learn about Windows azure, go to www.windowsazure.com</p>]]></bodyText>
+      <bodyText><![CDATA[<p>To learn about Windows azure, go to www.windowsazure.com</p>
+<p> </p>
+<p>Adding test info... updated during presentation</p>]]></bodyText>
     </umbTextpage>
   </umbHomepage>
 </root>
